# Transcrybe

./: Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
transcrybe/: lib.py  main.py
