[tool.poetry]
name = "transcrybe"
version = "0.1.0"
description = "FastAPI service to transcribe and diarize audio"
authors = ["Katherine Rose <kiarc@kiarc.win>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.114.0" }
python-multipart = "^0.0.9"
pyannote-audio = { git = "https://github.com/pyannote/pyannote-audio", rev = "0ea4c025ee048c36d74ccdb8b3f4939a27ad729b" }
whisperx = { git = "https://github.com/m-bain/whisperx.git" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
hypothesis = "^6.112.0"
poethepoet = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.dev]
cmd = "fastapi dev transcrybe/main.py"
envfile = ".env"

[tool.poe.tasks.serve]
cmd = "fastapi run transcrybe/main.py"
