[tool.poetry]
name = "transcrybe"
version = "0.1.0"
description = "FastAPI service to transcribe and diarize audio"
authors = ["Katherine Rose <kiarc@kiarc.win>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.114.0" }
python-multipart = "^0.0.9"
whisperx = { git = "https://github.com/m-bain/whisperx.git" }
# Poetry for some reason picks 0.51.1 otherwise which requires an old llvmlite version which prevents the env from building
numba = "^0.60.0"
# Use CPU build of torch, I'm not supporting GPUs yet and the NVIDIA dependencies are huge
torch = { version = "^2.4.1+cpu", source = "pytorch-cpu" }
torchaudio = {version = "^2.4.1+cpu", source = "pytorch-cpu"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
hypothesis = "^6.112.0"
poethepoet = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.dev]
cmd = "fastapi dev transcrybe/main.py"
envfile = ".env"

[tool.poe.tasks.serve]
cmd = "fastapi run transcrybe/main.py"
